--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <script src="./iconfonts/iconfont.js"></script>
     <link rel="stylesheet" href="css/bilibili.css">
-    <script src="./js/bilibili.js"></script>
+    <script src="./js/bilibili.js" defer></script>
   </head>
   <body>
     <div class="header">
@@ -39,7 +39,7 @@
             <span>下载APP</span>
           </div>
           <div class="search">
-            <input type="text" name="search" id="search">
+            <input type="text" name="search" id="search" placeholder="人类迷惑行为大赏">
             <div>
               <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-search"></use>
@@ -501,10 +501,10 @@
           <input type="radio" name="loop" id="loop_2">
           <input type="radio" name="loop" id="loop_3">
           <input type="radio" name="loop" id="loop_4" checked>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div><div>这里是视频的名字DAZE</div></div>
+          <div><div>这里是视频的名字DAZE</div></div>
+          <div><div>这里是视频的名字DAZE</div></div>
+          <div><div>这里是视频的名字DAZE</div></div>
           <label for="loop_1">
             <span>
               <svg class="icon" aria-hidden="true">
@@ -731,7 +731,157 @@
           </div>
         </div>
       </div>
-      <div class="partition b up advertisement">
+      <div class="partition b up advertisement slide">
+        <a name='zhibo'>
+        <div class="title">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-zhibo"></use>
+          </svg>
+          <span>正在直播</span>
+        </div>
+        <div class="main">
+          <div class="vedio">
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+            <div class="box">
+              <div></div>
+              <span>标题</span>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-UPzhu"></use>
+                </svg>
+                <span>up主</span>
+              </div>
+            </div>
+          </div>
+          <div class="advertisement">
+            
+          </div>
+          <div class="rank">
+            <div class="title">
+              排行榜
+            </div>
+            <ul class="list">
+              <li>
+                <div class="ranking">1</div>
+                <div class="img">
+
+                </div>
+                <div class="describe">
+                  <div class="name">这是一个视频</div>
+                  <div class="score">综合得分：114.514万</div>
+                </div>
+              </li>
+              <li>
+                <div class="ranking">2</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">3</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">4</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">5</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">6</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">7</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">8</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">9</div>
+                视频名
+              </li>
+              <li>
+                <div class="ranking">10</div>
+                视频名
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="partition b up rank slide">
+        <a name='donghua'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-icon-test"></use>
@@ -879,155 +1029,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
-        <div class="title">
-          <svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-icon-test"></use>
-          </svg>
-          <span>动画</span>
-        </div>
-        <div class="main">
-          <div class="vedio">
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-            <div class="box">
-              <div></div>
-              <span>标题</span>
-              <div>
-                <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-UPzhu"></use>
-                </svg>
-                <span>up主</span>
-              </div>
-            </div>
-          </div>
-          <div class="advertisement">
-            
-          </div>
-          <div class="rank">
-            <div class="title">
-              排行榜
-            </div>
-            <ul class="list">
-              <li>
-                <div class="ranking">1</div>
-                <div class="img">
-
-                </div>
-                <div class="describe">
-                  <div class="name">这是一个视频</div>
-                  <div class="score">综合得分：114.514万</div>
-                </div>
-              </li>
-              <li>
-                <div class="ranking">2</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">3</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">4</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">5</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">6</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">7</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">8</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">9</div>
-                视频名
-              </li>
-              <li>
-                <div class="ranking">10</div>
-                视频名
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="partition animation rank">
+      <div class="partition animation rank slide">
+        <a name='fanjv'>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-shipin"></use>
@@ -1366,12 +1369,13 @@
           </div>
         </div>
       </div>
-      <div class="partition animation rank">
+      <div class="partition animation rank slide">
+        <a name='guochuang'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
-            <use xlink:href="#icon-shipin"></use>
+            <use xlink:href="#icon-guochuang"></use>
           </svg>
-          <span>番剧</span>
+          <span>国创</span>
           <ul class="update_time">
             <input type="radio" name="cartoon_2" id="cartoon_2_1" checked>
             <input type="radio" name="cartoon_2" id="cartoon_2_2">
@@ -1705,7 +1709,8 @@
           </div>
         </div>
       </div>
-      <div class="partition cartoon b up rank">
+      <div class="partition cartoon b up rank slide">
+        <a name='manhua'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-manhua"></use>
@@ -1871,7 +1876,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='yinyue'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-tianchongxing-"></use>
@@ -2019,7 +2025,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='wudao'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-wudao"></use>
@@ -2167,7 +2174,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='youxi'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-youxi"></use>
@@ -2315,7 +2323,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='zhishi'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-zhishi"></use>
@@ -2463,7 +2472,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up advertisement">
+      <div class="partition b up advertisement slide">
+        <a name='ketang'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-ketang"></use>
@@ -2611,7 +2621,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='shuma'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-shuma"></use>
@@ -2759,7 +2770,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='shenghuo'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-yazi"></use>
@@ -2907,7 +2919,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='guichu'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-xiaochou"></use>
@@ -3055,7 +3068,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='shishang'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-qunzi"></use>
@@ -3203,7 +3217,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='zixun'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-zixun"></use>
@@ -3351,7 +3366,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='yule'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-yule"></use>
@@ -3499,7 +3515,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b essay rank">
+      <div class="partition b essay rank slide">
+        <a name='zhuanlan'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-zhuanlan1"></use>
@@ -3775,7 +3792,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='dianying'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-dyanjing"></use>
@@ -3923,7 +3941,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='tv'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-shafa"></use>
@@ -4071,7 +4090,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide ">
+        <a name='yingshi'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-yingshi"></use>
@@ -4219,7 +4239,8 @@
           </div>
         </div>
       </div>
-      <div class="partition b up rank">
+      <div class="partition b up rank slide">
+        <a name='jilu'></a>
         <div class="title">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-jingyu"></use>
@@ -4430,38 +4451,40 @@
         </div>
         <div class="body">
           <ul class="menu">
-            <li>直播</li>
-            <li>动画</li>
-            <li>番剧</li>
-            <li>国创</li>
-            <li>漫画</li>
-            <li>音乐</li>
-            <li>舞蹈</li>
-            <li>游戏</li>
-            <li>知识</li>
-            <li>课堂</li>
-            <li>数码</li>
-            <li>生活</li>
-            <li>鬼畜</li>
-            <li>时尚</li>
-            <li>资讯</li>
-            <li>娱乐</li>
-            <li>专栏</li>
-            <li>电影</li>
-            <li>TV剧</li>
-            <li>影视</li>
-            <li>纪录片</li>
+            <a href="#zhibo"><li>直播</li></a>
+            <a href="#donghua"><li>动画</li></a>
+            <a href="#fanjv"><li>番剧</li></a>
+            <a href="#guochuang"><li>国创</li></a>
+            <a href="#manhua"><li>漫画</li></a>
+            <a href="#yinyue"><li>音乐</li></a>
+            <a href="#wudao"><li>舞蹈</li></a>
+            <a href="#youxi"><li>游戏</li></a>
+            <a href="#zhishi"><li>知识</li></a>
+            <a href="#ketang"><li>课堂</li></a>
+            <a href="#shuma"><li>数码</li></a>
+            <a href="#shenghuo"><li>生活</li></a>
+            <a href="#guichu"><li>鬼畜</li></a>
+            <a href="#shishang"><li>时尚</li></a>
+            <a href="#zixun"><li>资讯</li></a>
+            <a href="#yule"><li>娱乐</li></a>
+            <a href="#zhuanlan"><li>专栏</li></a>
+            <a href="#dianying"><li>电影</li></a>
+            <a href="#tv"><li>TV剧</li></a>
+            <a href="#yingshi"><li>影视</li></a>
+            <a href="#jilu"><li>纪录片</li></a>
           </ul>
           <div class="setting">
             <svg class="icon" aria-hidden="true">
               <use xlink:href="#icon-jiaohuan"></use>
             </svg>
           </div>
-          <div class="to_top">
-            <svg class="icon" aria-hidden="true">
-              <use xlink:href="#icon-xiala-copy"></use>
-            </svg>
-          </div>
+          <a href="#">
+            <div class="to_top">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-xiala-copy"></use>
+              </svg>
+            </div>
+          </a>
         </div>
       </div>
     </div>
