--- a/html/user.html
+++ b/html/user.html
@@ -7,8 +7,325 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script src="../iconfonts/iconfont.js"></script>
+    <link rel="stylesheet" href="../css/user.css">
+    <script src="../js/user.js" defer></script>
   </head>
   <body>
-    
+    <div class="background"></div>
+    <div class="menu">
+      <div class="partition_menu">
+        <ul>
+          <li>
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-bilibili"></use>
+            </svg>
+            <span>主站</span>
+          </li>
+          <li>番剧</li>
+          <li>游戏中心</li>
+          <li>直播</li>
+          <li>会员购</li>
+          <li>漫画</li>
+          <li>赛事</li>
+          <li>S10</li>
+        </ul>
+      </div>
+      <div class="download">
+        <svg class="icon" aria-hidden="true">
+          <use xlink:href="#icon-shouji"></use>
+        </svg>
+        <span>下载APP</span>
+      </div>
+      <div class="search">
+        <input type="text" name="search" id="search" placeholder="人类迷惑行为大赏">
+        <div>
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-search"></use>
+          </svg>
+        </div>
+        <ul class="search_history">
+          <li>
+            <span></span>
+            <svg class="icon" aria-hidden="true" name='del'>
+              <use xlink:href="#icon-chushaixuanxiang" name='del'></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
+      <div class="user_menu">
+        <div class="user vip" id="user">
+          <div class="hover"></div>
+          <div class="img"></div>
+          <div class="user_data">
+            <div class="user_name">
+              蘑菇碳
+            </div>
+            <div class="vip">
+              大会员
+            </div>
+            <div class="level">
+              <div>
+                <span>等级4</span>
+                <span>9310/10800</span>
+              </div>
+              <div>
+                <div class="all">
+                  <div class="now"></div>
+                </div>
+              </div>
+            </div>
+            <div class="resource">
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-icon_dingdao_yingbi"></use>
+                </svg>
+                <span>614</span>
+              </div>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-icon_dingdao_Bbi"></use>
+                </svg>
+                <span>0</span>
+              </div>
+              <div class="bind">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-youxiang"></use>
+                </svg>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-zhongduanguanli"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="state">
+              <div>
+                <div>关注</div>
+                <span>37</span>
+              </div>
+              <div>
+                <div>粉丝</div>
+                <span>9</span>
+              </div>
+              <div>
+                <div>动态</div>
+                <span>67</span>
+              </div>
+            </div>
+            <div class="menu">
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-user_active"></use>
+                </svg>
+                <span>个人中心</span>
+              </div>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-tougaoguanli"></use>
+                </svg>
+                <span>投稿管理</span>
+              </div>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-qianbao"></use>
+                </svg>
+                <span>B站钱包</span>
+              </div>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-icon-"></use>
+                </svg>
+                <span>订单中心</span>
+              </div>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-pingmu"></use>
+                </svg>
+                <span>直播中心</span>
+              </div>
+              <div>
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-shu"></use>
+                </svg>
+                <span>我的课程</span>
+              </div>
+            </div>
+            <div class="language">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-yuyan"></use>
+              </svg>
+              <span>语言：简体中文</span>
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-xiala-copy
+                "></use>
+              </svg>
+            </div>
+            <div class="quit">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="#icon-tuichu"></use>
+              </svg>
+              <span>退出</span>
+            </div>
+          </div>
+        </div>
+        <ul>
+          <li>大会员</li>
+          <li>消息</li>
+          <li>动态</li>
+          <li>收藏</li>
+          <li>历史</li>
+          <li>创作中心</li>
+          <li>投稿</li>
+        </ul>
+      </div>
+    </div>
+    <div class="main">
+      <div class="user">
+        <div class="img"></div>
+        <div class="user">
+          <div class="img"></div>
+          <span>蘑菇碳</span>
+        </div>
+        <div class="state">
+          <div><span>37</span><span>关注</span></div>
+          <div><span>9</span><span>粉丝</span></div>
+          <div><span>67</span><span>动态</span></div>
+        </div>
+      </div>
+      <div class="message">
+        <div class="publish">
+          <div class="text_input" contenteditable="true" placeholder="有什么想和大家分享的？"></div>
+          <div class="operations">
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-biaoqing"></use>
+            </svg>
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-tupian"></use>
+            </svg>
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-jinghao"></use>
+            </svg>
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-toupiao"></use>
+            </svg>
+            <svg class="icon" aria-hidden="true">
+              <use xlink:href="#icon-miaobiao"></use>
+            </svg>
+          </div>
+          <div class="submit">
+            发布
+          </div>
+          <div class="clear_float"></div>
+        </div>
+        <div class="concern">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-xiala-copy"></use>
+          </svg>
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-xiala-copy"></use>
+          </svg>     
+          <div class="list">
+            <div class="all now">
+              <div class="img">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-fengche"></use>
+                </svg>
+              </div>
+              <span>全部动态</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>人类早期驯服</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>objtube的卢克儿</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>手工耿</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>敬汉卿</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>大祥哥来了</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>老尚带你学前端</span>
+            </div>
+            <div>
+              <div class="img">
+
+              </div>
+              <span>幽紫kk-二色幽紫蝶</span>
+            </div>
+          </div>
+        </div>
+        <div class="filter">
+          <input type="radio" name="filter" id="filter_1" checked>
+          <input type="radio" name="filter" id="filter_2">
+          <input type="radio" name="filter" id="filter_3">
+          <input type="radio" name="filter" id="filter_4">
+          <label for="filter_1"><span>全部</span></label>
+          <label for="filter_2"><span>投稿视频</span></label>
+          <label for="filter_3"><span>追番追剧</span></label>
+          <label for="filter_4"><span>专栏</span></label>
+          <div class="move"></div>
+        </div>
+      </div>
+      <div class="topics">
+        <div class="topic_1">
+          <span>公告栏</span>
+          <div class="img"></div>
+        </div>
+        <div class="topic_2">
+          <div class="title">
+            <span>话题</span>
+            <span>更多</span>
+          </div>
+          <ul class="topics">
+            <li>
+              <div class="icon"></div>
+              <span>#夺冠#</span>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <span>#全品类征稿活动【金秋音乐】#</span>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <span>#游挑战月#</span>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <span>#秋日舞蹈狂欢季#</span>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <span>#配音大赛#</span>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <span>#2020bilibili混剪大赛#</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
