--- a/html/user.html
+++ b/html/user.html
@@ -56,7 +56,7 @@
       <div class="user_menu">
         <div class="user vip" id="user">
           <div class="hover"></div>
-          <div class="img"></div>
+          <div class="img"><a href="../index.html"><div></div></a></div>
           <div class="user_data">
             <div class="user_name">
               蘑菇碳
@@ -191,7 +191,7 @@
           <div><span>67</span><span>动态</span></div>
         </div>
       </div>
-      <div class="message">
+      <div class="messages">
         <div class="publish">
           <div class="text_input" contenteditable="true" placeholder="有什么想和大家分享的？"></div>
           <div class="operations">
@@ -286,6 +286,382 @@
           <label for="filter_3"><span>追番追剧</span></label>
           <label for="filter_4"><span>专栏</span></label>
           <div class="move"></div>
+        </div>
+        <div class="message vedio">
+          <div class="user">
+            <img src="../images/concern_1_4.png" alt="">
+          </div>
+          <div class="content">
+            <div class="user_name">敬汉卿</div>
+            <div class="time">10-06</div>
+            <div class="text">一个反思视频</div>
+            <div class="images">
+
+            </div>
+            <div class="vedio">
+              <div class="img">
+                <img src="../images/vedio_1.png" alt="">
+                <div class="tag">投稿视频</div>
+                <div class="mask">
+                  <span class="time">05:38</span> 
+                  <div>
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-shaohouzaikan"></use>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <div class="content">
+                <div class="title">老双面人了</div>
+                <div class="discribe">一个反思视频</div>
+                <div class="state">
+                  <div class="view">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bofang1"></use>
+                    </svg>
+                    <span>97.9万</span>
+                  </div>
+                  <div class="comment">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-danmu"></use>
+                    </svg>
+                    <span>6126</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="essay"></div>
+            <div class="forward"></div>
+            <div class="operations">
+              <div class="forward">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-zhuanfa"></use>
+                </svg>
+                <span>552</span>
+              </div>
+              <div class="comment">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-pinglun2"></use>
+                </svg>
+                <span>2万</span>
+              </div>
+              <div class="like">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-dianzan"></use>
+                </svg>
+                <span>9.6万</span>
+              </div>
+            </div>
+            <div class="forward">
+              <div class="box">
+                <div class="image"></div>
+                <textarea placeholder="请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。"></textarea>
+                <div class="operation">
+                  <div class="smile">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bilibili-fill"></use>
+                    </svg>
+                    <span>表情</span>
+                  </div>
+                  <div class="submit">转发</div>
+                </div>
+              </div>
+              <ul class="forward_list">
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="user_name">张三</div>
+                    <div class="value">转发动态</div>
+                    <div class="time">一分钟前</div>
+                  </div>
+                </li>
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="user_name">蘑菇碳</div>
+                    <div class="value">转发动态</div>
+                    <div class="time">一小时前</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="comment">
+              <div class="filter">
+                <input type="radio" name="filter_1" id="filter_1_1" checked>
+                <input type="radio" name="filter_1" id="filter_1_2">
+                <span><label for="filter_1_1">按热度排序</label></span>
+                <span><label for="filter_1_2">按时间排序</label></span>
+                <div class="move"></div>
+              </div>
+              <div class="box">
+                <div class="img"></div>
+                <div class="box">
+                  <div class="comment">
+                    <textarea placeholder="发条友善的评论"></textarea>
+                    <div class="submit">发表评论</div>
+                  </div>
+                  <div class="smile">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bilibili-fill"></use>
+                    </svg>
+                    <span>表情</span>
+                  </div>
+                </div>
+              </div>
+              <ul class="comment_list">
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="name">张三</div>
+                    <div class="value">张三的评论</div>
+                    <div class="time">6分钟前</div>
+                  </div>
+                </li>
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="name">张三的同伙</div>
+                    <div class="value">张三的同伙的评论</div>
+                    <div class="time">32分钟前</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="message image">
+          <div class="user">
+            <img src="../images/up_2.jpg" alt="">
+          </div>
+          <div class="content">
+            <div class="user_name">罗翔说刑法</div>
+            <div class="time">15小时前</div>
+            <div class="text">居然翻到十六岁时的日记本，一时百感交集</div>
+            <div class="images">
+              <img src="../images/image_1.png">
+            </div>
+            <div class="vedio">
+            </div>
+            <div class="essay"></div>
+            <div class="forward"></div>
+            <div class="operations">
+              <div class="forward">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-zhuanfa"></use>
+                </svg>
+                <span>433</span>
+              </div>
+              <div class="comment">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-pinglun2"></use>
+                </svg>
+                <span>4072</span>
+              </div>
+              <div class="like">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-dianzan"></use>
+                </svg>
+                <span>12.3万</span>
+              </div>
+            </div>
+            <div class="forward">
+              <div class="box">
+                <div class="image"></div>
+                <textarea placeholder="请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。"></textarea>
+                <div class="operation">
+                  <div class="smile">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bilibili-fill"></use>
+                    </svg>
+                    <span>表情</span>
+                  </div>
+                  <div class="submit">转发</div>
+                </div>
+              </div>
+              <ul class="forward_list">
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="user_name">张三</div>
+                    <div class="value">转发动态</div>
+                    <div class="time">一分钟前</div>
+                  </div>
+                </li>
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="user_name">蘑菇碳</div>
+                    <div class="value">转发动态</div>
+                    <div class="time">一小时前</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="comment">
+              <div class="filter">
+                <input type="radio" name="filter_1" id="filter_1_1" checked>
+                <input type="radio" name="filter_1" id="filter_1_2">
+                <span><label for="filter_1_1">按热度排序</label></span>
+                <span><label for="filter_1_2">按时间排序</label></span>
+                <div class="move"></div>
+              </div>
+              <div class="box">
+                <div class="img"></div>
+                <div class="box">
+                  <div class="comment">
+                    <textarea placeholder="发条友善的评论"></textarea>
+                    <div class="submit">发表评论</div>
+                  </div>
+                  <div class="smile">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bilibili-fill"></use>
+                    </svg>
+                    <span>表情</span>
+                  </div>
+                </div>
+              </div>
+              <ul class="comment_list">
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="name">张三</div>
+                    <div class="value">张三的评论</div>
+                    <div class="time">6分钟前</div>
+                  </div>
+                </li>
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="name">张三的同伙</div>
+                    <div class="value">张三的同伙的评论</div>
+                    <div class="time">32分钟前</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="message essay">
+          <div class="user">
+            <img src="../images/up_2.jpg" alt="">
+          </div>
+          <div class="content">
+            <div class="user_name">罗翔说刑法</div>
+            <div class="time">15小时前</div>
+            <div class="text"></div>
+            <div class="images">
+              <img src="../images/image_1.png">
+            </div>
+            <div class="vedio">
+            </div>
+            <div class="essay">
+              <div class="image">
+                <img src="../images/essay_1.png" alt="">
+              </div>
+              <div class="title">
+                谢谢那些和我一起开读书会的年轻人
+              </div>
+              <div class="into">
+                点击进入查看全文
+              </div>
+            </div>
+            <div class="forward"></div>
+            <div class="operations">
+              <div class="forward">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-zhuanfa"></use>
+                </svg>
+                <span>595</span>
+              </div>
+              <div class="comment">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-pinglun2"></use>
+                </svg>
+                <span>1810</span>
+              </div>
+              <div class="like">
+                <svg class="icon" aria-hidden="true">
+                  <use xlink:href="#icon-dianzan"></use>
+                </svg>
+                <span>6.8万</span>
+              </div>
+            </div>
+            <div class="forward">
+              <div class="box">
+                <div class="image"></div>
+                <textarea placeholder="请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。"></textarea>
+                <div class="operation">
+                  <div class="smile">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bilibili-fill"></use>
+                    </svg>
+                    <span>表情</span>
+                  </div>
+                  <div class="submit">转发</div>
+                </div>
+              </div>
+              <ul class="forward_list">
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="user_name">张三</div>
+                    <div class="value">转发动态</div>
+                    <div class="time">一分钟前</div>
+                  </div>
+                </li>
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="user_name">蘑菇碳</div>
+                    <div class="value">转发动态</div>
+                    <div class="time">一小时前</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="comment">
+              <div class="filter">
+                <input type="radio" name="filter_1" id="filter_1_1" checked>
+                <input type="radio" name="filter_1" id="filter_1_2">
+                <span><label for="filter_1_1">按热度排序</label></span>
+                <span><label for="filter_1_2">按时间排序</label></span>
+                <div class="move"></div>
+              </div>
+              <div class="box">
+                <div class="img"></div>
+                <div class="box">
+                  <div class="comment">
+                    <textarea placeholder="发条友善的评论"></textarea>
+                    <div class="submit">发表评论</div>
+                  </div>
+                  <div class="smile">
+                    <svg class="icon" aria-hidden="true">
+                      <use xlink:href="#icon-bilibili-fill"></use>
+                    </svg>
+                    <span>表情</span>
+                  </div>
+                </div>
+              </div>
+              <ul class="comment_list">
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="name">张三</div>
+                    <div class="value">张三的评论</div>
+                    <div class="time">6分钟前</div>
+                  </div>
+                </li>
+                <li>
+                  <div class="image"></div>
+                  <div class="box">
+                    <div class="name">张三的同伙</div>
+                    <div class="value">张三的同伙的评论</div>
+                    <div class="time">32分钟前</div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="topics">
